--- a/ex4.html
+++ b/ex4.html
@@ -14,7 +14,7 @@
    <button onclick="addItem()">Enter</button>
 
    <ul id="shoppingList">
-      <li>Notebook<!--<button>Delete</button></li>-->
+      <li>Notebook</li><!--<button>Delete</button></li>-->
       <li>Jello</li>
       <li>Spinach</li>
       <li>Rice</li>
