--- a/ex1.html
+++ b/ex1.html
@@ -23,6 +23,7 @@
                 // Invalid age: Age must be between 10 and 40.
                 // Invalid email: Email must contain the character @.
                 // Empty password: Password must be non-empty.
+                // commit msg
                 var errorMessages="";
                 
                 let form = document.forms[formName];
