--- a/ex3.html
+++ b/ex3.html
@@ -24,6 +24,7 @@
     <script>
 
         // add code here
+        // commit msg
         function addItem() {
             let itemName = document.getElementById("itemName").value;
             // create li element
