--- a/ex5.html
+++ b/ex5.html
@@ -29,6 +29,7 @@
 
     <script>
         // add code here
+        // commit msg
         function mOver(obj) {
             // obj.style.borderRadius = "0";
             obj.classList.add("square");
