--- a/ex2.html
+++ b/ex2.html
@@ -33,6 +33,7 @@
     <script>
         var square = true;
         // add code here
+        // commit msg
         function changeShape() {
             const div = document.getElementById("div1");
 
@@ -43,7 +44,7 @@
                 div.classList.remove("circle");
                 div.classList.add("square");
             }
-            
+
             square = !square; // flips state
         }
 
