--- a/ex4.html
+++ b/ex4.html
@@ -11,6 +11,7 @@
 
    <input type="text" id="inputText">
    <!-- add a button here for adding new item -->
+
    <button onclick="addItem()">Enter</button>
 
    <ul id="shoppingList">
@@ -25,6 +26,7 @@
    <script>
 
       // add code here
+      // commit msg
       function addDeleteBtn(listItem) {
          let deleteBtn = document.createElement("button");
          deleteBtn.innerText = "Delete";
